apps/sm-java-test-repo-02/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sm-java-test-repo-02
  labels:
    backstage.io/kubernetes-id: sm-java-test-repo-02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sm-java-test-repo-02
  template:
    metadata:
      labels:
        app: sm-java-test-repo-02
        backstage.io/kubernetes-id: sm-java-test-repo-02
    spec:
      containers:
        - name: sm-java-test-repo-02
          image: sureshmavp1/sm-java-test-repo-02:1.0.1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
