apps/sm-java-test-repo-02/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sm-java-test-repo-02
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2   
spec:
  rules:
    - http:
        paths:
          - path: /sm-java-test-repo-02(/|$)(.*)               
            pathType: Prefix        
            backend:
              service:
                name: sm-java-test-repo-02
                port:
                  number: 80
